<resources>
    <string name="app_name">卷云天气</string>
    <string name="sug">生活指数</string>
    <string name="sug_air">空气</string>
    <string name="sug_comfort">舒适度</string>
    <string name="sug_dress">穿衣</string>
    <string name="sug_car_wash">洗车</string>
    <string name="sug_flu">感冒</string>
    <string name="sug_sport">运动</string>
    <string name="sug_travel">旅游</string>
    <string name="sug_ultraviolet">紫外线</string>
    <string name="humidity">湿度</string>
    <string name="wind">风力</string>
    <string name="hourly_forecast">24小时预报</string>
    <string name="daily_forecast">7天预报</string>
    <string name="setting">设置</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="clear">清除</string>
    <string name="weather_push">开启智能提醒</string>
    <string name="notification_bar">通知栏常驻</string>
    <string name="smart_remind">智能提醒</string>
    <string name="auto_update">自动更新</string>
    <string name="update_interval">更新间隔</string>
    <string name="default_update_interval">2 小时</string>
    <string-array name="interval_time">
        <item>1 小时</item>
        <item>2 小时</item>
        <item>4 小时</item>
        <item>8 小时</item>
        <item>12 小时</item>
    </string-array>
    <string name="clear_cache">清除缓存</string>
    <string name="update_time">发布时间:</string>
    <string name="relative_hum">湿度</string>
    <string name="precipitation">降水量</string>
    <string name="air_pressure">气压</string>
    <string name="visibility">能见度</string>
    <string name="feel_temp">体感温度</string>
    <string name="ultraviolet">紫外线</string>
    <string name="sun_rise">日出</string>
    <string name="sun_set">日落</string>
    <string name="moon_rise">月升</string>
    <string name="moon_set">月落</string>
    <string name="sun_rise_time">8:00</string>
    <string name="sun_set_time">18:00</string>
    <string name="update_new_time">14:25</string>
    <string name="percent">%</string>
    <string name="degree">°</string>
    <string name="c_degree">℃</string>
    <string name="km">km</string>
    <string name="hPa">hPa</string>
    <string name="level">级</string>
    <string name="unknown">N/A</string>
    <string name="colon">：</string>
    <string name="city_manage">城市管理</string>
    <string name="resident">常驻</string>
    <string name="family_number">亲情号码</string>
    <string name="family_number_clear">亲情号码已清空</string>
    <string name="family_number_associate_success">亲情号码关联成功</string>
    <string name="call">称呼</string>
    <string name="phone_number">手机号码</string>
    <string name="call_empty">称呼不能为空</string>
    <string name="phone_number_not_valid">手机号码不合法，请重新输入</string>
    <string name="delete">删除</string>
    <string name="search_hint">搜索全国城市</string>
    <string name="hot_city">热门城市</string>
    <string name="locating">定位中</string>
    <string name="locate_unknown">未知</string>
    <string name="default_city">北京</string>
    <string name="locate_failed">定位失败，请打开Gps后重试</string>
    <string name="network_unavailable">您当前网络不可用，请联网后重试</string>
    <string name="data_unavailable">由于未知原因获取数据失败，请稍后重试</string>
    <string name="permission_denied">定位权限获取失败，请手动授权后重试</string>
    <string name="goto_open">前往打开</string>
    <string name="request_location_permission">您需要同意以下权限方可使用定位功能</string>
    <string name="request_write_permission">该功能需要获取访问储存权限</string>
    <string name="send_message_permission">该功能需要获取发送短信权限</string>
    <string name="confirm_clear_cache">确定清除缓存</string>
    <string name="clear_cache_success">清除缓存成功</string>
    <string name="already_resident_city">该城市已是常驻城市</string>
    <string name="keep_resident_city">您不能删除常驻城市</string>
    <string name="live_weather">实景天气</string>
    <string name="please_choose">请选择</string>
    <string name="comment">评论</string>
    <string name="comment_is_empty">评论内容不能为空</string>
    <string name="comment_success">评论成功</string>
    <string name="comment_failed">评论失败，请稍后重试</string>
    <string name="send">发送</string>
    <string name="preview">预览</string>
    <string name="publish">发表</string>
    <string name="publish_success">发表成功</string>
    <string name="publish_failed">发表失败，请稍后重试</string>
    <string name="comment_hint">美景配好文~</string>
    <string name="function_under_developing">该功能正在开发中</string>
    <string name="confirm_logout">确定退出登录</string>
    <string name="login_hint">登录后方可使用此功能，确定登录</string>
    <string name="login_failed">登录失败</string>
    <string-array name="choose_photo_mode">
        <item>从相册选取</item>
        <item>现在拍照</item>
    </string-array>
    <string-array name="login_type">
        <item>QQ登录</item>
        <item>微信登录</item>
    </string-array>
    <string name="beijing">北京市</string>
    <string name="tianjin">天津市</string>
    <string name="shanghai">上海市</string>
    <string name="chongqing">重庆市</string>
    <string name="shenyang">沈阳市</string>
    <string name="dalian">大连市</string>
    <string name="changchun">长春市</string>
    <string name="haerbin">哈尔滨市</string>
    <string name="zhengzhou">郑州市</string>
    <string name="wuhan">武汉市</string>
    <string name="changsha">长沙市</string>
    <string name="guangzhou">广州市</string>
    <string name="shenzhen">深圳市</string>
    <string name="nanjing">南京市</string>
    <string name="hangzhou">杭州市</string>
    <string name="dongguan">东莞市</string>
    <string name="chengdu">成都市</string>
    <string name="qingdao">青岛市</string>
    <string name="suzhou">苏州市</string>
    <string name="xiamen">厦门市</string>
</resources>