<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="clickListener"
            type="android.view.View.OnClickListener" />
    </data>

    <RelativeLayout
        android:id="@+id/rl_choose_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_background_cloud"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_dark"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <ImageView
                    android:id="@+id/iv_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_set_back" />

                <EditText
                    android:id="@+id/et_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/shape_search"
                    android:hint="@string/search_hint"
                    android:maxLength="12"
                    android:maxLines="1"
                    android:paddingLeft="16dp"
                    android:paddingTop="8dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="8dp"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </LinearLayout>

            <GridLayout
                android:id="@+id/gl_hot_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="3"
                android:orientation="horizontal"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:rowCount="8">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:layout_columnSpan="3"
                    android:layout_gravity="center"
                    android:padding="16dp"
                    android:text="@string/hot_city"
                    android:textColor="@color/light_gray" />

                <TextView
                    android:id="@+id/tv_location"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/shape_hot_city"
                    android:drawableStart="@drawable/ic_location"
                    android:gravity="center"
                    android:maxLines="1"
                    android:onClick="@{clickListener}"
                    android:padding="8dp"
                    android:text="@string/locating"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/shape_hot_city"
                    android:gravity="center"
                    android:onClick="@{clickListener}"
                    android:padding="8dp"
                    android:text="@string/beijing"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/shape_hot_city"
                    android:gravity="center"
                    android:onClick="@{clickListener}"
                    android:padding="8dp"
                    android:text="@string/tianjin"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/shape_hot_city"
                    android:gravity="center"
                    android:onClick="@{clickListener}"
                    android:padding="8dp"
                    android:text="@string/shanghai"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/shape_hot_city"
                    android:gravity="center"
                    android:onClick="@{clickListener}"
                    android:padding="8dp"
                    android:text="@string/chongqing"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/shape_hot_city"
                    android:gravity="center"
                    android:onClick="@{clickListener}"
                    android:padding="8dp"
                    android:text="@string/shenyang"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/shape_hot_city"
                    android:gravity="center"
                    android:onClick="@{clickListener}"
                    android:padding="8dp"
                    android:text="@string/dalian"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/shape_hot_city"
                    android:gravity="center"
                    android:onClick="@{clickListener}"
                    android:padding="8dp"
                    android:text="@string/changchun"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/shape_hot_city"
                    android:gravity="center"
                    android:onClick="@{clickListener}"
                    android:padding="8dp"
                    android:text="@string/haerbin"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/shape_hot_city"
                    android:gravity="center"
                    android:onClick="@{clickListener}"
                    android:padding="8dp"
                    android:text="@string/zhengzhou"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/shape_hot_city"
                    android:gravity="center"
                    android:onClick="@{clickListener}"
                    android:padding="8dp"
                    android:text="@string/wuhan"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/shape_hot_city"
                    android:gravity="center"
                    android:onClick="@{clickListener}"
                    android:padding="8dp"
                    android:text="@string/changsha"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/shape_hot_city"
                    android:gravity="center"
                    android:onClick="@{clickListener}"
                    android:padding="8dp"
                    android:text="@string/guangzhou"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/shape_hot_city"
                    android:gravity="center"
                    android:onClick="@{clickListener}"
                    android:padding="8dp"
                    android:text="@string/shenzhen"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/shape_hot_city"
                    android:gravity="center"
                    android:onClick="@{clickListener}"
                    android:padding="8dp"
                    android:text="@string/nanjing"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/shape_hot_city"
                    android:gravity="center"
                    android:onClick="@{clickListener}"
                    android:padding="8dp"
                    android:text="@string/hangzhou"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/shape_hot_city"
                    android:gravity="center"
                    android:onClick="@{clickListener}"
                    android:padding="8dp"
                    android:text="@string/dongguan"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/shape_hot_city"
                    android:gravity="center"
                    android:onClick="@{clickListener}"
                    android:padding="8dp"
                    android:text="@string/chengdu"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/shape_hot_city"
                    android:gravity="center"
                    android:onClick="@{clickListener}"
                    android:padding="8dp"
                    android:text="@string/qingdao"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/shape_hot_city"
                    android:gravity="center"
                    android:onClick="@{clickListener}"
                    android:padding="8dp"
                    android:text="@string/suzhou"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/shape_hot_city"
                    android:gravity="center"
                    android:onClick="@{clickListener}"
                    android:padding="8dp"
                    android:text="@string/xiamen"
                    android:textSize="15sp" />
            </GridLayout>

            <LinearLayout
                android:id="@+id/ll_search_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/divider" />

                <ListView
                    android:id="@+id/lv_search_result"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@color/divider"
                    android:dividerHeight="1px" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</layout>
