<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="4dp"
    android:background="@color/background_dark">

    <RelativeLayout
        android:id="@+id/rl_notice_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/pic_bar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_103"/>

        <TextView
            android:id="@+id/now_Temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/pic_bar"
            android:text="2℃"
            android:textColor="@color/white"
            android:textSize="13sp"/>

        <TextView
            android:id="@+id/lowTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/now_Temp"
            android:layout_below="@+id/now_Temp"
            android:text="-1°"
            android:textColor="@color/white"
            android:textSize="13sp"/>

        <TextView
            android:id="@+id/character"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/now_Temp"
            android:layout_toEndOf="@+id/lowTemp"
            android:text=" ~ "
            android:textColor="@color/white"
            android:textSize="13sp"/>

        <TextView
            android:id="@+id/highTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/now_Temp"
            android:layout_toEndOf="@+id/character"
            android:text="6°"
            android:textColor="@color/white"
            android:textSize="13sp"/>

        <TextView
            android:id="@+id/weatherDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/lowTemp"
            android:layout_below="@+id/lowTemp"
            android:text="晴间多云"
            android:textColor="@color/white"
            android:textSize="13sp"/>

        <TextView
            android:id="@+id/sun_rise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:text="@string/sun_rise"
            android:textColor="@color/white"
            android:textSize="13sp"/>

        <TextView
            android:id="@+id/sun_rise_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/sun_rise"
            android:text="@string/sun_rise_time"
            android:textColor="@color/white"
            android:textSize="13sp"/>

        <TextView
            android:id="@+id/sun_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/sun_rise"
            android:layout_below="@+id/sun_rise"
            android:text="@string/sun_set"
            android:textColor="@color/white"
            android:textSize="13sp"/>

        <TextView
            android:id="@+id/sun_set_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sun_rise_time"
            android:layout_toStartOf="@+id/sun_set"
            android:text="@string/sun_set_time"
            android:textColor="@color/white"
            android:textSize="13sp"/>

        <TextView
            android:id="@+id/update_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/sun_set"
            android:layout_below="@+id/sun_set"
            android:text="@string/update_new_time"
            android:textColor="@color/white"
            android:textSize="13sp"/>

        <TextView
            android:id="@+id/update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sun_set"
            android:layout_toStartOf="@+id/update_time"
            android:text="@string/update_time"
            android:textColor="@color/white"
            android:textSize="13sp"/>

        <TextView
            android:id="@+id/city_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sun_set"
            android:layout_marginEnd="20dp"
            android:layout_toStartOf="@+id/update"
            android:text="@string/unknown"
            android:textColor="@color/white"
            android:textSize="13sp"/>
    </RelativeLayout>
</RelativeLayout>